created a landing Page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,14 @@
+/* In your CSS file */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body{
   background-color: black;
   margin-left: 80px;
